--- a/MONFORTE_Pierre_WFA.csproj
+++ b/MONFORTE_Pierre_WFA.csproj
@@ -98,5 +98,11 @@
   <ItemGroup>
     <None Include="Resources\plateforme2.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\enemy.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\enemy1.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
